<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    tools:context=".activities.ContactFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:textAlignment="center"
                    android:text="@string/contact"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/contact_us"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:textAlignment="textStart"
                    android:text="@string/follow_our_devs_on_facebook"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/devs"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>