<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_miscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_miscellaneous"
    android:orientation="vertical"
    android:padding="15dp"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/pick_color_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/options"
        android:textColor="@color/background_color"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

<!--        <LinearLayout-->
<!--            android:id="@+id/layout_open_as"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal"-->
<!--            tools:ignore="UseCompoundDrawables"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            >-->

<!--            <ImageView-->
<!--                android:id="@+id/open_as_btn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_marginEnd="28dp"-->
<!--                android:src="@drawable/open_note"-->
<!--                android:contentDescription="@string/app_name"/>-->

<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="start|center"-->
<!--                android:fontFamily="@font/inter_medium"-->
<!--                android:text="@string/open_as_note"-->
<!--                android:textColor="@color/background_color"-->
<!--                android:textSize="14sp" />-->

<!--        </LinearLayout>-->

        <LinearLayout
            android:id="@+id/layout_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables"
            >

            <ImageView
                android:id="@+id/delete_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="28dp"
                android:src="@drawable/delete_btn"
                android:contentDescription="@string/app_name"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:fontFamily="@font/inter_medium"
                android:text="@string/delete"
                android:textColor="@color/cta_delete"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>