<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="25dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical"
    tools:context=".activities.PolicyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:textAlignment="center"
                    android:text="Co.Studify Privacy Policy"
                    android:textColor="@color/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/policy_string"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:text="Service Providers"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/service_providers"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:text="Children's Privacy"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/childrens_privacy"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_extrabold"
                    android:includeFontPadding="false"
                    android:paddingVertical="15dp"
                    android:text="Changes to this Privacy Policy"
                    android:textColor="@color/text_color"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_medium"
                    android:includeFontPadding="false"
                    android:text="@string/changes_to_policy"
                    android:textAlignment="textStart"
                    android:textColor="@color/text_color"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>