<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddNotes">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:id="@+id/scrollView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/appBar"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:gravity="start"
                android:orientation="horizontal"
                android:background="@drawable/background_miscellaneous2"
                android:paddingHorizontal="25dp"
                tools:ignore="MissingConstraints">

                <ImageView
                    android:id="@+id/backNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/backDesc"
                    android:src="@drawable/less_than_btn"
                    app:tint="@color/background_color" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_weight="2"
                    android:fontFamily="@font/inter_extrabold"
                    android:text="@string/add_notes"
                    android:textColor="@color/background_color"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/saveNotes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/done_btn" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/noteArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="25dp"
                app:layout_constraintTop_toBottomOf="@+id/appBar">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/noteTitleIndicator"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_gravity="center"
                        android:background="@drawable/indicator"
                        />

                    <EditText
                        android:id="@+id/tileInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="11dp"
                        android:background="@null"
                        android:fontFamily="@font/inter_extrabold"
                        android:hint="@string/title"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:textColor="@color/text_color"
                        android:textColorHint="@color/highlight_color"
                        android:textSize="20sp" />

                </LinearLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/viewImageContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp" >

                    <ImageView
                        android:id="@+id/imageNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/app_name"
                        android:visibility="gone"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/removeImageBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/close_btn"
                        android:visibility="gone"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/app_name"
                        app:layout_constraintEnd_toEndOf="@id/imageNote"
                        app:layout_constraintTop_toTopOf="@id/imageNote"/>
                </androidx.constraintlayout.widget.ConstraintLayout>

                <EditText
                    android:id="@+id/contentInput"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/inter_medium"
                    android:gravity="top"
                    android:hint="@string/addContent"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:minHeight="300dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@color/highlight_color"
                    android:textSize="14sp" />

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/secondary_background_color"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp"
        android:paddingVertical="8dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <ImageButton
                android:id="@+id/add_image_miscellaneous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/add_image" />

            <ImageButton
                android:id="@+id/add_color_miscellaneous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:src="@drawable/paint_icon" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/background_color"
                android:gravity="center"
                android:textSize="14sp"
                android:text="@string/created_date"
                android:layout_gravity="center"/>

        </LinearLayout>

        <ImageButton
            android:id="@+id/setting_miscellaneous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_mini_setting"
            android:backgroundTint="@color/background_color"
            android:contentDescription="@string/app_name" />


    </LinearLayout>

    <include layout="@layout/add_color_miscellaneous" />

    <include layout="@layout/add_image_miscellaneous" />

    <include layout="@layout/settings_miscellaneous" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>